refactor: 全面代码审查修复 — 安全、类型安全、性能优化
- fix: AuthInterceptor 日志不再泄露 JWT Token（降为 DEBUG）
- fix: changeSelfPassword 增加旧密码验证（新增 ChangeSelfPasswordReq）
- fix: DeptService.tree() 禁用 DeptFilter 防止双重过滤
- fix: MessageService 分页移除错误的双重转换
- feat: AuthService 返回强类型 LoginResult/UserInfoResult 替代 HashMap
- feat: MenuService.tree() 使用 Jimmer MenuTreeView 替代手动 Map 构建
- feat: 超级管理员 info() 返回所有系统权限
- perf: Redis KEYS 命令替换为 SCAN（新增 RedisHelper 工具类）
- fix: UserService.update() 不再误删用户 token
- fix: checkEmailUnique 移除冗余 IGNORED 行为
- fix: DataSeeder 不再每次启动覆盖角色菜单映射
- fix: markRead 方法添加 @Transactional
- fix: DeptFilter 移除魔法数字 -1L
- feat: GlobalExceptionHandler 增加 @Valid 校验异常处理

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>